# SPM

./: README.md
assignment_1/: assignment_1.cpp  assignment_1_wrong.cpp
assignment_2/: Makefile  assignment_2_par_async.cpp  assignment_2_par_forkjoin.cpp  assignment_2_par_grppi.cpp  assignment_2_seq.cpp  run_assignment_2.sh
assignment_2/results/: assignment_2_res.ods
assignment_3/: assignment_3_par.cpp  assignment_3_results.ods  assignment_3_seq.cpp
assignment_4/: assignment_4  assignment_4.cpp
assignment_5/: Makefile  assignment_5.cpp
assignment_6/: assignment_6_alt.cpp  assignment_6_ff.cpp  assignment_6_ff_alt  assignment_6_grppi.cpp  assignment_6_reduce.cpp  assignment_6_seq.cpp
assignment_7/: assignment_7  assignment_7.cpp
assignments/assignment_3/: Makefile
assignments/assignment_4/: assignment_4.cpp
assignments/assignment_5/: shared_queue.cpp
assignments/assignment_6/: Makefile  assignment_6.cpp  assignment_6_alt  assignment_6_ff_alt.cpp  assignment_6_omp.cpp  assignment_6_reduce
assignments/assignment_7/: Makefile
lab_1/: my_reduce_par.cpp  my_translation_par.cpp
project/: .gitignore  CMakeLists.txt  MotionDetector.cpp  ff.cpp  ff_alt.cpp  ff_av.cpp  ff_av_dynamic.cpp  ff_motion_detection.cpp  motion_detection_utils.cpp  motion_detection_utils_class.cpp  output_test.txt  parallel_av.cpp  parallel_class.cpp  parallel_with_locks.cpp  pthread_av.cpp  pthread_av_dynamic.cpp  pthread_av_timings.cpp  pthread_motion_detection.cpp  run_tests.sh  run_tests_tc.sh  sequential.cpp  sequential_av.cpp  sequential_motion_detection.cpp  sequential_with_queue.cpp  sharedQueue.cpp  test.ods  test_balance.cpp  utimer.cpp
project/old_versions/: CMakeLists.txt  pthread_av_static.cpp  pthread_av_tc.cpp
project/opencv_tests/: .gitignore  CMakeLists.txt  test_image.cpp  test_timings.cpp  test_video.cpp
project/tests/: test_speedup.ods
project_extras/old_versions/: ff_alt.cpp  ff_av_static.cpp  motion_detection_utils.cpp  parallel.cpp  two_threads.cpp
project_extras/opencv_tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_image  test_image.cpp  test_timings  test_timings.cpp  test_timings_local_machine.ods  test_video  test_video.cpp  test_video_alt  test_video_alt.cpp
remote_project/: MotionDetector.cpp  ff_av.cpp  parallel_av.cpp
