cmake_minimum_required(VERSION 2.8)
project( Motion_Detector )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( sequential_av sequential_av.cpp )
target_link_libraries( sequential_av ${OpenCV_LIBS} )
add_executable( pthread_av pthread_av.cpp )
target_link_libraries( pthread_av ${OpenCV_LIBS} )
add_executable( ff_av ff_av.cpp )
target_link_libraries( ff_av ${OpenCV_LIBS} )
set(CMAKE_CXX_FLAGS "-O3 -std=c++20 -pthread")
