cmake_minimum_required(VERSION 2.8)
project( Motion_Detector )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( sequential_av sequential_av.cpp )
target_link_libraries( sequential_av ${OpenCV_LIBS} )
add_executable( pthread_av pthread_av.cpp )
target_link_libraries( pthread_av ${OpenCV_LIBS} )
add_executable( pthread_av_timings pthread_av_timings.cpp )
target_link_libraries( pthread_av_timings ${OpenCV_LIBS} )
add_executable( pthread_av_dynamic pthread_av_dynamic.cpp )
target_link_libraries( pthread_av_dynamic ${OpenCV_LIBS} )
add_executable( test_balance test_balance.cpp )
target_link_libraries( test_balance ${OpenCV_LIBS} )
add_executable( ff_av ff_av.cpp )
target_link_libraries( ff_av ${OpenCV_LIBS} )
set(CMAKE_CXX_FLAGS "-O3 -std=c++20 -pthread")
