cmake_minimum_required(VERSION 2.8)
project( test_video )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( test_video test_video.cpp )
add_executable( test_image test_image.cpp )
add_executable( test_video_alt test_video_alt.cpp )
target_link_libraries( test_video ${OpenCV_LIBS} )
target_link_libraries( test_video_alt ${OpenCV_LIBS} )
target_link_libraries( test_image ${OpenCV_LIBS} )
set(CMAKE_CXX_FLAGS "-O3")